@@ -59,6 +59,7 @@
 * PayU Latam: Update supported countries list [shasum]
 * TransFirsTransactionExpress: Take into account blank string CVV [davidsantoso]
 * Barclaycard SmartPay: Update supported countries [shasum]
+* Omise: Update supported countries and cards [fred]
 
 == Version 1.60.0 (July 4, 2016)
 * Orbital: Fix CC num leak on profile calls [drewblas]
